@@ -21,6 +21,8 @@ Changes in @NEW@:
       information to be absolute instead of relative when the files are on
       different servers, eliminating server crosstalk on source checkin and
       when committing local changesets. (bz #1033)
+    * Cvc merge now takes a revision, to allow you merge only up to a certain
+      point instead of to head.
 
   o Server Changes:
     * Removed the ability for the server to log updates to its contents
